--- a/app/src/components/AIAnswer/AIAnswer.module.css
+++ b/app/src/components/AIAnswer/AIAnswer.module.css
@@ -4,7 +4,8 @@
     background-color: #e5dfd5;
     border-radius: 4px;
     text-decoration: none;
-    margin: 0px, 4px;
+    margin: 0px 2px;
+    padding: 0 2px;
 }
 .cardStyle{
     transition-duration: 1s;
